RESOLVED FIXED226069
[Cocoa] Last few seconds of 'audio/webm; codecs=vorbis' appended to a SampleBuffer are not played
https://bugs.webkit.org/show_bug.cgi?id=226069
Summary [Cocoa] Last few seconds of 'audio/webm; codecs=vorbis' appended to a SampleB...
Jer Noble
Reported 2021-05-20 23:31:08 PDT
[Cocoa] Last few seconds of 'audio/webm; codecs=vorbis' appended to a SampleBuffer are not played
Attachments
Patch (23.66 KB, patch)
2021-05-20 23:37 PDT, Jer Noble
no flags
Patch for landing (6.73 KB, patch)
2021-06-23 23:47 PDT, Jer Noble
no flags
Patch for landing (27.79 KB, patch)
2021-06-23 23:47 PDT, Jer Noble
no flags
Patch for landing (27.81 KB, patch)
2021-06-24 09:33 PDT, Jer Noble
ews-feeder: commit-queue-
Patch for landing (28.68 KB, patch)
2021-06-24 13:31 PDT, Jer Noble
no flags
Patch (486.29 KB, patch)
2021-06-30 09:50 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (486.38 KB, patch)
2021-06-30 16:22 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (486.34 KB, patch)
2021-06-30 19:22 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (485.86 KB, patch)
2021-07-01 00:58 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (485.84 KB, patch)
2021-07-01 01:10 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (485.83 KB, patch)
2021-07-01 15:41 PDT, Jean-Yves Avenard [:jya]
no flags
Jer Noble
Comment 1 2021-05-20 23:31:34 PDT
Jer Noble
Comment 2 2021-05-20 23:37:19 PDT
Jer Noble
Comment 3 2021-05-21 08:14:59 PDT
mac-AS-debug-wk2 bot is failing because it's not been updated to macOS 11.3, which has support for Vorbis.
EWS
Comment 4 2021-05-21 10:07:55 PDT
Committed r277867 (238007@main): <https://commits.webkit.org/238007@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429267 [details].
Truitt Savell
Comment 5 2021-05-24 14:18:00 PDT
the new test platform/mac-bigsur/media/media-source/media-vorbis-partial.html is failing constantly sense introduction History: https://results.webkit.org/?suite=layout-tests&test=platform%2Fmac-bigsur%2Fmedia%2Fmedia-source%2Fmedia-vorbis-partial.html Diff: --- /Volumes/Data/worker/bigsur-release-tests-wk2/build/layout-test-results/platform/mac-bigsur/media/media-source/media-vorbis-partial-expected.txt +++ /Volumes/Data/worker/bigsur-release-tests-wk2/build/layout-test-results/platform/mac-bigsur/media/media-source/media-vorbis-partial-actual.txt @@ -3,10 +3,9 @@ EVENT(sourceopen) RUN(source.duration = loader.duration()) RUN(sourceBuffer = source.addSourceBuffer(loader.type())) +NotSupportedError: The operation is not supported. RUN(sourceBuffer.appendBuffer(loader.initSegment())) -EVENT(update) -Append a media segment. -RUN(sourceBuffer.appendBuffer(loader.mediaSegment(0))) -EVENT(update) -EXPECTED (sourceBuffer.buffered.end(0) == source.duration == 'true') OK +TypeError: undefined is not an object (evaluating 'sourceBuffer.appendBuffer') +Caught exception: "TypeError: undefined is not an object (evaluating 'element.addEventListener')" FAIL END OF TEST +
WebKit Commit Bot
Comment 6 2021-05-24 21:11:23 PDT
Re-opened since this is blocked by bug 226211
Jer Noble
Comment 7 2021-06-23 23:46:53 PDT
Jer Noble
Comment 8 2021-06-23 23:47:14 PDT
Created attachment 432134 [details] Patch for landing
Jer Noble
Comment 9 2021-06-23 23:47:56 PDT
Created attachment 432135 [details] Patch for landing
Jer Noble
Comment 10 2021-06-24 09:33:45 PDT
Created attachment 432175 [details] Patch for landing
Jer Noble
Comment 11 2021-06-24 13:31:34 PDT
Created attachment 432206 [details] Patch for landing
EWS
Comment 12 2021-06-24 16:08:03 PDT
Committed r279250 (239134@main): <https://commits.webkit.org/239134@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432206 [details].
WebKit Commit Bot
Comment 13 2021-06-29 13:18:28 PDT
Re-opened since this is blocked by bug 227499
Jean-Yves Avenard [:jya]
Comment 14 2021-06-30 04:08:13 PDT
*** Bug 227382 has been marked as a duplicate of this bug. ***
Jean-Yves Avenard [:jya]
Comment 15 2021-06-30 09:50:08 PDT
Eric Carlson
Comment 16 2021-06-30 10:14:56 PDT
Comment on attachment 432607 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=432607&action=review > Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:304 > + if (numActuallyRead) We return early above if `numActuallyRead` is null
Jean-Yves Avenard [:jya]
Comment 17 2021-06-30 16:22:05 PDT
Created attachment 432641 [details] Patch skip opus test on non Montarey OS as the codec isn't supported
Jean-Yves Avenard [:jya]
Comment 18 2021-06-30 19:22:04 PDT
Created attachment 432651 [details] Patch apply comment
Jean-Yves Avenard [:jya]
Comment 19 2021-07-01 00:58:35 PDT
Created attachment 432665 [details] Patch Move tests to media/media-source rather than platform
Jean-Yves Avenard [:jya]
Comment 20 2021-07-01 01:10:27 PDT
Created attachment 432666 [details] Patch TestExpectations file wasn't committed
Eric Carlson
Comment 21 2021-07-01 10:27:33 PDT
Comment on attachment 432666 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=432666&action=review > Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:304 > + *numActuallyRead += lastRead; Nit: indentation is wrong
Jean-Yves Avenard [:jya]
Comment 22 2021-07-01 15:41:37 PDT
Created attachment 432736 [details] Patch apply comment
EWS
Comment 23 2021-07-01 18:08:52 PDT
Committed r279492 (239344@main): <https://commits.webkit.org/239344@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432736 [details].
Jean-Yves Avenard [:jya]
Comment 24 2021-07-01 20:14:02 PDT
iOS-wk2 isn't related to this patch, it doesn't use MSE nor a webm container.
Note You need to log in before you can comment on or make changes to this bug.