Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp
@@ -284,10 +284,13 @@ public:
     Status Read(std::size_t numToRead, uint8_t* outputBuffer, uint64_t* numActuallyRead) final
     {
         ASSERT(outputBuffer && numActuallyRead);
-        if (!outputBuffer || !numActuallyRead)
+        if (!numActuallyRead)
             return Status(Status::kNotEnoughMemory);
 
         *numActuallyRead = 0;
+        if (!outputBuffer)
+            return Status(Status::kNotEnoughMemory);
+
         while (numToRead && m_currentSegment != m_data.end()) {
             auto& currentSegment = *m_currentSegment;
 
@@ -296,10 +299,11 @@ public:
                 continue;
             }
 
-            *numActuallyRead = currentSegment.read(m_positionWithinSegment, numToRead, outputBuffer);
-            m_position += *numActuallyRead;
-            m_positionWithinSegment += *numActuallyRead;
-            numToRead -= *numActuallyRead;
+            uint64_t lastRead = currentSegment.read(m_positionWithinSegment, numToRead, outputBuffer);
+            m_position += lastRead;
+            *numActuallyRead += lastRead;
+            m_positionWithinSegment += lastRead;
+            numToRead -= lastRead;
             if (m_positionWithinSegment == currentSegment.size())
                 advanceToNextSegment();
         }
@@ -626,6 +630,12 @@ void SourceBufferParserWebM::appendData(Segment&& segment, CompletionHandler<voi
         m_status = m_parser->Feed(this, &m_reader);
         if (m_status.ok() || m_status.code == Status::kEndOfFile || m_status.code == Status::kWouldBlock) {
             m_reader->reclaimSegments();
+
+            // Audio tracks are grouped into meta-samples of a duration no more than m_minimumSampleDuration.
+            // But at the end of a file, no more audio data may be incoming, so flush and emit any pending
+            // audio buffers.
+            flushPendingAudioBuffers();
+
             completionHandler();
             return;
         }
@@ -1078,15 +1088,26 @@ webm::Status SourceBufferParserWebM::VideoTrackData::consumeFrameData(webm::Read
 #if ENABLE(VP9)
     CMBlockBufferRef rawBlockBuffer = nullptr;
 
+    if (m_currentPacketSize && *m_currentPacketSize != metadata.size) {
+        // The packet's metadata doesn't match the currently pending partial packet; restart.
+        ASSERT_NOT_REACHED_WITH_MESSAGE("VideoTrackData::consumeFrameData: webm in nonsensical state");
+        m_partialBytesRead = 0;
+        m_currentBlockBuffer = nullptr;
+        m_currentPacketSize = std::nullopt;
+    }
+
+    if (!m_currentPacketSize)
+        m_currentPacketSize = metadata.size;
+
     if (!m_currentBlockBuffer) {
-        auto err = PAL::CMBlockBufferCreateWithMemoryBlock(kCFAllocatorDefault, nullptr, metadata.size, kCFAllocatorDefault, nullptr, 0, metadata.size, 0, &rawBlockBuffer);
+        auto err = PAL::CMBlockBufferCreateWithMemoryBlock(kCFAllocatorDefault, nullptr, *m_currentPacketSize, kCFAllocatorDefault, nullptr, 0, *m_currentPacketSize, 0, &rawBlockBuffer);
         if (err) {
             PARSER_LOG_ERROR_IF_POSSIBLE("CMBlockBufferCreateWithMemoryBlock failed with error", err);
             return Skip(&reader, bytesRemaining);
         }
 
         m_currentBlockBuffer = adoptCF(rawBlockBuffer);
-        m_currentBlockBufferPosition = 0;
+        m_partialBytesRead = 0;
 
         err = PAL::CMBlockBufferAssureBlockMemory(m_currentBlockBuffer.get());
         if (err) {
@@ -1095,30 +1116,41 @@ webm::Status SourceBufferParserWebM::VideoTrackData::consumeFrameData(webm::Read
         }
     }
 
-    size_t bytesToRead = metadata.size - m_currentBlockBufferPosition;
-    while (bytesToRead) {
+    if (*m_currentPacketSize < m_partialBytesRead + *bytesRemaining) {
+        PARSER_LOG_ERROR_IF_POSSIBLE("Invalid frame size allocated, ignoring the entire frame");
+        m_partialBytesRead += *bytesRemaining;
+        return Skip(&reader, bytesRemaining);
+    }
+    while (*bytesRemaining) {
         size_t segmentSizeAtPosition = 0;
         uint8_t* blockBufferData = nullptr;
-        auto err = PAL::CMBlockBufferGetDataPointer(m_currentBlockBuffer.get(), m_currentBlockBufferPosition, &segmentSizeAtPosition, nullptr, (char**)&blockBufferData);
+        auto err = PAL::CMBlockBufferGetDataPointer(m_currentBlockBuffer.get(), m_partialBytesRead, &segmentSizeAtPosition, nullptr, (char**)&blockBufferData);
         if (err) {
             PARSER_LOG_ERROR_IF_POSSIBLE("CMBlockBufferGetDataPointer failed with error", err);
             return Skip(&reader, bytesRemaining);
         }
-
-        size_t bytesToReadFromThisSegment = std::min(bytesToRead, segmentSizeAtPosition);
+        if (*bytesRemaining < segmentSizeAtPosition) {
+            PARSER_LOG_ERROR_IF_POSSIBLE("An error occurred, destination buffer too small to contain our frame");
+            return Skip(&reader, bytesRemaining);
+        }
         uint64_t bytesRead;
-
-        auto status = reader.Read(bytesToReadFromThisSegment, (uint8_t*)blockBufferData, &bytesRead);
-        bytesToRead -= bytesRead;
+        auto status = reader.Read(*bytesRemaining, (uint8_t*)blockBufferData, &bytesRead);
         *bytesRemaining -= bytesRead;
-        m_currentBlockBufferPosition += bytesRead;
+        m_partialBytesRead += bytesRead;
 
-        // FIXME: We can't yet handle parsing a Frame that doesn't have all its memory available.
-        if (status.code == webm::Status::kOkPartial || status.code == webm::Status::kWouldBlock)
+        if (!status.completed_ok())
             return status;
     }
 
+    ASSERT(m_partialBytesRead <= *m_currentPacketSize);
+    if (m_partialBytesRead < *m_currentPacketSize)
+        return webm::Status(webm::Status::kOkPartial);
+
     createSampleBuffer(presentationTime, sampleCount, metadata);
+
+    m_currentBlockBuffer = nullptr;
+    m_partialBytesRead = 0;
+    m_currentPacketSize = std::nullopt;
 #else
     UNUSED_PARAM(metadata);
     UNUSED_PARAM(presentationTime);
@@ -1186,9 +1218,6 @@ void SourceBufferParserWebM::VideoTrackData::createSampleBuffer(const CMTime& pr
     }
     auto sampleBuffer = adoptCF(rawSampleBuffer);
 
-    m_currentBlockBuffer = nullptr;
-    m_currentBlockBufferPosition = 0;
-
     auto attachmentsArray = PAL::CMSampleBufferGetSampleAttachmentsArray(sampleBuffer.get(), true);
     ASSERT(attachmentsArray);
     if (!attachmentsArray) {
@@ -1217,38 +1246,43 @@ webm::Status SourceBufferParserWebM::AudioTrackData::consumeFrameData(webm::Read
     ASSERT(sampleCount);
 
     if (m_packetDescriptions.isEmpty()) {
-        m_packetBytesRead = 0;
         m_byteOffset = metadata.position;
         m_samplePresentationTime = presentationTime;
     }
 
-    if (!m_currentPacketSize) {
-        m_currentPacketSize = metadata.size;
-        m_packetData.grow(m_packetData.size() + metadata.size);
+    if (m_currentPacketSize && *m_currentPacketSize != metadata.size) {
+        // The packet's metadata doesn't match the currently pending partial packet; restart.
+        ASSERT_NOT_REACHED_WITH_MESSAGE("AudioTrackData::consumeFrameData: webm in nonsensical state");
+        m_partialBytesRead = 0;
+        m_currentPacketSize = std::nullopt;
     }
+
+    if (!m_currentPacketSize)
+        m_currentPacketSize = metadata.size;
+
+    // Ensure we have room to store the full pending frame.
+    if (m_packetsData.size() < m_packetsBytesRead + metadata.size)
+        m_packetsData.grow(m_packetsBytesRead + metadata.size);
 
     if (!m_currentPacketByteOffset)
-        m_currentPacketByteOffset = m_packetBytesRead;
+        m_currentPacketByteOffset = m_packetsBytesRead;
 
-    ASSERT(m_partialBytesRead < metadata.size);
-    size_t bytesToRead = metadata.size;
-    if (m_partialBytesRead && m_partialBytesRead < bytesToRead)
-        bytesToRead -= m_partialBytesRead;
-    while (bytesToRead) {
+    while (*bytesRemaining) {
         uint64_t bytesRead;
-        auto status = reader.Read(bytesToRead, m_packetData.data() + m_packetBytesRead, &bytesRead);
-        bytesToRead -= bytesRead;
+        auto status = reader.Read(*bytesRemaining, m_packetsData.data() + m_packetsBytesRead + m_partialBytesRead, &bytesRead);
         *bytesRemaining -= bytesRead;
-        m_packetBytesRead += bytesRead;
+        m_partialBytesRead += bytesRead;
 
-        // FIXME: We can't yet handle parsing a Frame that doesn't have all its memory available.
-        if (status.code == webm::Status::kOkPartial || status.code == webm::Status::kWouldBlock) {
-            m_partialBytesRead += bytesRead;
+        if (!status.completed_ok())
             return status;
-        }
-
-        m_partialBytesRead = 0;
     }
+
+    ASSERT(m_partialBytesRead <= *m_currentPacketSize);
+    if (m_partialBytesRead < *m_currentPacketSize)
+        return webm::Status(webm::Status::kOkPartial);
+
+    m_packetsBytesRead += m_partialBytesRead;
+    m_partialBytesRead = 0;
 
     if (!formatDescription()) {
         if (!track().codec_private.is_present()) {
@@ -1262,7 +1296,7 @@ webm::Status SourceBufferParserWebM::AudioTrackData::consumeFrameData(webm::Read
             formatDescription = createVorbisAudioFormatDescription(privateData.size(), privateData.data());
         else if (codec() == CodecType::Opus) {
             OpusCookieContents cookieContents;
-            if (!parseOpusPrivateData(privateData.size(), privateData.data(), m_packetData.size(), m_packetData.data(), cookieContents)) {
+            if (!parseOpusPrivateData(privateData.size(), privateData.data(), m_packetsBytesRead, m_packetsData.data(), cookieContents)) {
                 PARSER_LOG_ERROR_IF_POSSIBLE("Failed to parse Opus private data");
                 return Skip(&reader, bytesRemaining);
             }
@@ -1294,7 +1328,7 @@ webm::Status SourceBufferParserWebM::AudioTrackData::consumeFrameData(webm::Read
         // that kind of variablility is encountered.
         OpusCookieContents cookieContents;
         auto& privateData = track().codec_private.value();
-        if (!parseOpusPrivateData(privateData.size(), privateData.data(), m_packetData.size(), m_packetData.data(), cookieContents)
+        if (!parseOpusPrivateData(privateData.size(), privateData.data(), m_packetsBytesRead, m_packetsData.data(), cookieContents)
             || cookieContents.framesPerPacket != m_framesPerPacket
             || cookieContents.frameDuration != m_frameDuration) {
             PARSER_LOG_ERROR_IF_POSSIBLE("Opus frames-per-packet changed within a track; error");
@@ -1302,34 +1336,35 @@ webm::Status SourceBufferParserWebM::AudioTrackData::consumeFrameData(webm::Read
         }
     }
 
-
     m_packetDescriptions.append({ static_cast<int64_t>(*m_currentPacketByteOffset), 0, static_cast<UInt32>(*m_currentPacketSize) });
     m_currentPacketByteOffset = std::nullopt;
     m_currentPacketSize = std::nullopt;
 
     auto sampleDuration = PAL::CMTimeGetSeconds(PAL::CMTimeSubtract(presentationTime, m_samplePresentationTime)) + PAL::CMTimeGetSeconds(m_packetDuration) * sampleCount;
+
     if (sampleDuration >= m_minimumSampleDuration)
         createSampleBuffer(metadata.position);
 
-    return Skip(&reader, bytesRemaining);
+    ASSERT(!*bytesRemaining);
+    return webm::Status(webm::Status::kOkCompleted);
 }
 
 void SourceBufferParserWebM::AudioTrackData::createSampleBuffer(std::optional<size_t> latestByteRangeOffset)
 {
-    if (m_packetDescriptions.isEmpty())
+    if (m_packetDescriptions.isEmpty() || !m_packetsBytesRead)
         return;
 
-    ASSERT(!m_packetData.isEmpty());
+    ASSERT(!m_packetsData.isEmpty());
 
     CMBlockBufferRef blockBuffer = nullptr;
-    auto err = PAL::CMBlockBufferCreateWithMemoryBlock(kCFAllocatorDefault, nullptr, m_packetData.sizeInBytes(), kCFAllocatorDefault, nullptr, 0, m_packetData.sizeInBytes(), kCMBlockBufferAssureMemoryNowFlag, &blockBuffer);
+    auto err = PAL::CMBlockBufferCreateWithMemoryBlock(kCFAllocatorDefault, nullptr, m_packetsBytesRead, kCFAllocatorDefault, nullptr, 0, m_packetsBytesRead, kCMBlockBufferAssureMemoryNowFlag, &blockBuffer);
     if (err) {
         PARSER_LOG_ERROR_IF_POSSIBLE("CMBlockBufferCreateWithMemoryBlock failed with %d", err);
         return;
     }
     auto buffer = adoptCF(blockBuffer);
 
-    err = PAL::CMBlockBufferReplaceDataBytes(m_packetData.data(), buffer.get(), 0, m_packetData.sizeInBytes());
+    err = PAL::CMBlockBufferReplaceDataBytes(m_packetsData.data(), buffer.get(), 0, m_packetsBytesRead);
     if (err) {
         PARSER_LOG_ERROR_IF_POSSIBLE("CMBlockBufferReplaceDataBytes failed with %d", err);
         return;
@@ -1343,7 +1378,10 @@ void SourceBufferParserWebM::AudioTrackData::createSampleBuffer(std::optional<si
     }
     auto sampleBuffer = adoptCF(rawSampleBuffer);
 
-    m_packetData.clear();
+    m_packetsData.remove(0, m_packetsBytesRead);
+    if (m_currentPacketByteOffset)
+        *m_currentPacketByteOffset -= m_packetsBytesRead;
+    m_packetsBytesRead = 0;
     m_packetDescriptions.clear();
 
     auto trackID = track().track_uid.value();
